# PeakRDL-reST

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/: sourceme
doc/source/: conf.py  example.rst  index.rst
docs/: Makefile  test.rdl
docs/source/: index.rst  regmap.rst
src/peakrdl_rest/: __init__.py  __peakrdl__.py  _version.py  exporter.py  sphinxext.py
test/: Makefile  requirements.txt  sourceme  test.rdl
test/doc-source/: conf.py
