[project]
name = "PeakRDL-rest"
requires-python = ">= 3.8"
dependencies = [
    "systemrdl-compiler >= 1.25.0",
    "peakrdl >= 1.1.0",
    "rstcloth ~= 0.6.0",
]
dynamic = ["version"]

[project.optional-dependencies]
sphinxcontrib-bitfield = ["sphinxcontrib-bitfield >= 2.0"]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tools.setuptools.dynamic]
version = { attr = "peakrdl_rest.__version__" }

[tool.setuptools_scm]
write_to = "src/peakrdl_rest/_version.py"

[project.entry-points."peakrdl.exporters"]
rest = "peakrdl_rest.__peakrdl__:Exporter"

[project.entry-points."sphinx.extensions"]
peakrdl_rest = "peakrdl_rest.sphinxext:setup"


